# clover_payload

./: CMakeLists.txt  README.md  package.xml
launch/: payload_box.launch  payload_phone.launch  payload_phone_no_cam.launch
models/Phone/: model.config  model.sdf
models/Phone_no_cam/: model.config  model.sdf
models/box/: model.config  model.sdf
scripts/: payload_manager.py
